--- a/Resources/views/Show/article.html.twig
+++ b/Resources/views/Show/article.html.twig
@@ -6,17 +6,30 @@
       <!--h3>YOUR NEWS ON A OLD PAPER</h3-->
 
       {{post.body|nl2br}}
-      <p class="date">Posted by Jack
-        {% image 'bundles/acmeblog/images/more.gif' %}
-          <img src="{{ asset_url }}" alt="Show more" />
-        {% endimage %}
-        <a href="#">Read more</a>  
+      <p class="date">Posted by {{post.author}}
+      {{id.timestamp|date("d.m.'y. G:i")}} h
         {% image 'bundles/acmeblog/images/comment.gif' %}
           <img src="{{ asset_url }}" alt="Comment" />
-        {% endimage %} <a href="#">Comments (15)</a>  
+        {% endimage %} <a href="#">Comments ({{comments|length}})</a>  
         {% image 'bundles/acmeblog/images/timeicon.gif' %}
           <img src="{{ asset_url }}" alt="Time" />
-        {% endimage %} 17.01.</p>
+        {% endimage %}</p>
       <br />
+      {% if comments|length > 0 %}
+        {% for comment in comments %}
+          <p>{{comment.text|nl2br}}</p>
+          <p><strong>{{comment.author}} {{comment.createdAt|date("d.m.y G:i")}} h</strong></p>
+          <br />
+        {% endfor %}
+      {% endif %}
+      <form novalidate action="" method="post">
+      {{form_label(form.author)}}:
+       {{form_widget(form.author)}}{{form_errors(form.author)}}<br />
+       {{form_label(form.text)}}:<br />
+       {{form_widget(form.text)}}{{form_errors(form.text)}}<br /><br />
+       {{form_widget(form._token)}}
+       <button type="submit">Save</button>
+       </form>
     </div>
+    
     {% endblock center %}
