--- a/Resources/views/Post/new.html.twig
+++ b/Resources/views/Post/new.html.twig
@@ -1,9 +1,22 @@
+{% extends 'AcmeBlogBundle:Post:layout.html.twig' %}
+
+{% block content %}
 <h2>New post</h2>
 
 <form novalidate action="" method="post">
 
-{{ form_widget(form) }}
+{{ form_label(form.title) }}:
+{{ form_widget(form.title) }}<br />
+{{ form_label(form.body) }}:<br />
+{{ form_widget(form.body) }}<br />
+{{ form_label(form.tags) }}:
+{{ form_widget(form.tags) }}<br />
+{{ form_label(form.slug) }}:
+{{ form_widget(form.slug) }}<br />
 
-<button type="submit">Save</button>
+{{ form_widget(form._token) }}
+
+<button type="submit" class="submit-button">Save</button>
 
 </form>
+{% endblock content %}
