--- a/Resources/views/Show/layout.html.twig
+++ b/Resources/views/Show/layout.html.twig
@@ -4,7 +4,7 @@
 <title>Manuscript Free Template</title>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
 
-{% stylesheets 'bundles/acmeblog/css/*' filter='cssrewrite' %}
+{% stylesheets 'bundles/acmeblog/css/style.css' filter='cssrewrite' %}
     <link rel="stylesheet" href="{{ asset_url }}" />
 {% endstylesheets %}
 </head>
@@ -22,7 +22,7 @@
     <div class="leftmenu">
       <div class="nav">
         <ul>
-          <li><a href="#">Home</a></li>
+          <li><a href="http://localhost/symfony/web/app_dev.php/blog/home">Home</a></li>
           <li><a href="#">Articles</a></li>
           <li><a href="#">Gallery</a></li>
           <li><a href="#">Affiliates</a></li>
