Added navigation menu in admin area.

--- a/Resources/views/Post/layout.html.twig
+++ b/Resources/views/Post/layout.html.twig
@@ -5,7 +5,15 @@
 {% endstylesheets %}
 </head>
 <body>
+
+{% block menu %}
+{% endblock menu%}
+
+{% block title %}
+{% endblock title %}
+
 {% block content %}
 {% endblock content %}
+
 </body>
 </html>
