--- a/Resources/public/css/admin-styles.css
+++ b/Resources/public/css/admin-styles.css
@@ -1,2 +1,11 @@
 .text-area {width:600px;height:300px;}
 .submit-button {width:100px;height:30px;font-size:15px;}
+.menu-item {list-style-type:none;display:inline;}
+.menu-link {
+	text-decoration:none;
+	font-family:arial,helvetica,sans-serif;
+	margin:10px;
+	padding:5px;
+	color:#fff;
+	background-color:#cdcdcd;
+}
