--- a/Resources/views/Post/new.html.twig
+++ b/Resources/views/Post/new.html.twig
@@ -1,7 +1,14 @@
 {% extends 'AcmeBlogBundle:Post:layout.html.twig' %}
 
+{% block menu %}
+	{% include 'AcmeBlogBundle:Post:menu.html.twig' %}
+{% endblock menu %}
+
+{% block title %}
+	<h2>New post</h2>
+{% endblock title %}
+
 {% block content %}
-<h2>New post</h2>
 
 <form novalidate action="" method="post">
 
